[project]
name = "room-lighting-simulator"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2==3.1.6",
    "matplotlib==3.10.8",
    "numpy>=2.4.2",
    "orjson==3.11.7",
    "pandas>=2.2.3,<3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "reportlab==4.4.10",
    "requests==2.32.5",
    "streamlit==1.54.0",
]
